--- a/admin/view/template/catalog/attribute_form.twig
+++ b/admin/view/template/catalog/attribute_form.twig
@@ -29,13 +29,34 @@
             <label class="col-sm-2 control-label">{{ entry_name }}</label>
             <div class="col-sm-10">
               {% for language in languages %}
-              <div class="input-group"><span class="input-group-addon"><img src="language/{{ language.code }}/{{ language.code }}.png" title="{{ language.name }}" /></span>
+              <div class="input-group" style="margin-bottom: 10px"><span class="input-group-addon"><img src="language/{{ language.code }}/{{ language.code }}.png" title="{{ language.name }}" /></span>
                 <input type="text" name="attribute_description[{{ language.language_id }}][name]" value="{{ attribute_description[language.language_id] ? attribute_description[language.language_id].name }}" placeholder="{{ entry_name }}" class="form-control" />
               </div>
               {% if error_name[language.language_id] %}
               <div class="text-danger">{{ error_name[language.language_id] }}</div>
               {% endif %}
               {% endfor %}
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-2 control-label">{{ entry_hint }}</label>
+            <div class="col-sm-10">
+              {% for language in languages %}
+              <div class="input-group" style="margin-bottom: 10px"><span class="input-group-addon"><img src="language/{{ language.code }}/{{ language.code }}.png" title="{{ language.name }}" /></span>
+                <input type="text" name="attribute_description[{{ language.language_id }}][hint]" value="{{ attribute_description[language.language_id] ? attribute_description[language.language_id].hint }}" placeholder="{{ entry_hint }}" class="form-control" />
+              </div>
+              {% endfor %}
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-2 control-label">{{ entry_default_values }}</label>
+            <div class="col-sm-10">
+              {% for language in languages %}
+              <div class="input-group" style="margin-bottom: 10px"><span class="input-group-addon"><img src="language/{{ language.code }}/{{ language.code }}.png" title="{{ language.name }}" /></span>
+                <input type="text" name="attribute_description[{{ language.language_id }}][default_values]" value="{{ attribute_description[language.language_id] ? attribute_description[language.language_id].default_values }}" placeholder="{{ entry_default_values }}" class="form-control" />
+              </div>
+              {% endfor %}
+              <small class="text-info">{{ help_default_values }}</small>
             </div>
           </div>
           <div class="form-group">
@@ -60,6 +81,13 @@
             <label class="col-sm-2 control-label" for="input-sort-order">{{ entry_sort_order }}</label>
             <div class="col-sm-10">
               <input type="text" name="sort_order" value="{{ sort_order }}" placeholder="{{ entry_sort_order }}" id="input-sort-order" class="form-control" />
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-2 control-label" for="input-icon">{{ entry_icon }}</label>
+            <div class="col-sm-10">
+              <input type="text" name="icon" value="{{ icon }}" placeholder="{{ entry_icon }}" id="input-icon" class="form-control" />
+              <small class="text-info">{{ help_icon }}</small>
             </div>
           </div>
         </form>
