--- a/admin/view/template/catalog/product_form.twig
+++ b/admin/view/template/catalog/product_form.twig
@@ -525,13 +525,25 @@
                     </tr>
                   </thead>
                   <tbody>
-
                     {% set attribute_row = 0 %}
                     {% for product_attribute in product_attributes %}
                       <tr id="attribute-row{{ attribute_row }}">
-                        <td class="text-left" style="width: 40%;"><input type="text" name="product_attribute[{{ attribute_row }}][name]" value="{{ product_attribute.name }}" placeholder="{{ entry_attribute }}" class="form-control"/> <input type="hidden" name="product_attribute[{{ attribute_row }}][attribute_id]" value="{{ product_attribute.attribute_id }}"/></td>
-                        <td class="text-left">{% for language in languages %}
-                            <div class="input-group"><span class="input-group-addon"><img src="language/{{ language.code }}/{{ language.code }}.png" title="{{ language.name }}"/></span> <textarea name="product_attribute[{{ attribute_row }}][product_attribute_description][{{ language.language_id }}][text]" rows="5" placeholder="{{ entry_text }}" class="form-control">{{ product_attribute.product_attribute_description[language.language_id] ? product_attribute.product_attribute_description[language.language_id].text }}</textarea>
+                        <td class="text-left" style="width: 40%;">
+                          <input type="text" name="product_attribute[{{ attribute_row }}][name]" value="{{ product_attribute.name }}" placeholder="{{ entry_attribute }}" class="form-control"/> 
+                          <input type="hidden" name="product_attribute[{{ attribute_row }}][attribute_id]" value="{{ product_attribute.attribute_id }}"/>
+                        </td>
+                        <td class="text-left">
+                          {% for language in languages %}
+                            <div class="input-group" style="margin-bottom: 10px">
+                              <span class="input-group-addon">
+                                <img src="language/{{ language.code }}/{{ language.code }}.png" title="{{ language.name }}"/>
+                              </span>
+                              <input name="product_attribute[{{ attribute_row }}][product_attribute_description][{{ language.language_id }}][text]" 
+                                data-attribute_id="{{ product_attribute.attribute_id }}" 
+                                data-language_id="{{ language.language_id }}"
+                                placeholder="{{ entry_text }}" 
+                                class="autocomplete form-control" 
+                                value="{{ product_attribute.product_attribute_description[language.language_id] ? product_attribute.product_attribute_description[language.language_id].text }}">
                             </div>
                           {% endfor %}</td>
                         <td class="text-right"><button type="button" onclick="$('#attribute-row{{ attribute_row }}').remove();" data-toggle="tooltip" title="{{ button_remove }}" class="btn btn-danger"><i class="fa fa-minus-circle"></i></button></td>
@@ -1346,7 +1358,7 @@ $('#article-related').delegate('.fa-minus-circle', 'click', function() {
 	  html += '  <td class="text-left" style="width: 20%;"><input type="text" name="product_attribute[' + attribute_row + '][name]" value="" placeholder="{{ entry_attribute }}" class="form-control" /><input type="hidden" name="product_attribute[' + attribute_row + '][attribute_id]" value="" /></td>';
 	  html += '  <td class="text-left">';
     {% for language in languages %}
-	  html += '<div class="input-group"><span class="input-group-addon"><img src="language/{{ language.code }}/{{ language.code }}.png" title="{{ language.name }}" /></span><textarea name="product_attribute[' + attribute_row + '][product_attribute_description][{{ language.language_id }}][text]" rows="5" placeholder="{{ entry_text }}" class="form-control"></textarea></div>';
+	  html += '<div class="input-group" style="margin-bottom: 10px"><span class="input-group-addon"><img src="language/{{ language.code }}/{{ language.code }}.png" title="{{ language.name }}" /></span><input name="product_attribute[' + attribute_row + '][product_attribute_description][{{ language.language_id }}][text]"  data-language_id="{{ language.language_id }}" placeholder="{{ entry_text }}" class="autocomplete form-control"></div>';
     {% endfor %}
 	  html += '  </td>';
 	  html += '  <td class="text-right"><button type="button" onclick="$(\'#attribute-row' + attribute_row + '\').remove();" data-toggle="tooltip" title="{{ button_remove }}" class="btn btn-danger"><i class="fa fa-minus-circle"></i></button></td>';
@@ -1354,12 +1366,12 @@ $('#article-related').delegate('.fa-minus-circle', 'click', function() {
 
 	  $('#attribute tbody').append(html);
 
-	  attributeautocomplete(attribute_row);
+	  attributeAutocomplete(attribute_row);
 
 	  attribute_row++;
   }
 
-  function attributeautocomplete(attribute_row) {
+  function attributeAutocomplete(attribute_row) {
 	  $('input[name=\'product_attribute[' + attribute_row + '][name]\']').autocomplete({
 		  'source': function(request, response) {
 			  $.ajax({
@@ -1384,8 +1396,51 @@ $('#article-related').delegate('.fa-minus-circle', 'click', function() {
   }
 
   $('#attribute tbody tr').each(function(index, element) {
-	  attributeautocomplete(index);
+	  attributeAutocomplete(index);
   });
+
+  $('body').on('focus', '.autocomplete', function() {
+    let $input = $(this);
+    let attribute_id = $input.closest('tr').find('input[type="hidden"]').val();
+    let language_id = $input.data('language_id');    
+
+    if(!attribute_id) {
+      return;
+    }
+
+    $.ajax({
+      url: 'index.php?route=catalog/attribute/default&user_token={{ user_token }}&attribute_id=' + encodeURIComponent(attribute_id) + '&language_id=' + encodeURIComponent(language_id),
+      dataType: 'json',
+      success: function(json) {
+        if(json.length) {
+          let $dropdown = $('<ul class="dropdown-menu" />');
+          let html = '';
+
+          for(let i = 0; i < json.length; i++) {
+            html += '<li><a href="#">' + json[i] + '</a></li>';
+          }
+
+          $dropdown.html(html);
+          $dropdown.find('a').on('click', function(e) {
+            e.preventDefault();
+            $input.val($(this).text());
+            $dropdown.remove();
+          });
+
+          $input.after($dropdown);
+          $dropdown.show();          
+        }
+      }
+    });
+  });
+
+  $('body').on('blur', '.autocomplete', function() {
+    let $input = $(this);
+    
+    setTimeout(function() {
+      $input.siblings('.dropdown-menu').remove();
+    }, 150);
+  })
 
   var option_row = {{ option_row }};
 
