--- a/catalog/view/theme/default/template/account/login.twig
+++ b/catalog/view/theme/default/template/account/login.twig
@@ -56,14 +56,14 @@
             </div>
             <div class="block">
               <input type="hidden" name="redirect" value="{{ redirect }}" />
-              <button type="submit" class="button is-primary is-light">
+              <button type="submit" class="button is-primary">
                 <span class="icon">
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="-0.5 -0.5 16 16" stroke-linecap="round" stroke-linejoin="round" stroke="currentColor" height="20" width="20">
                     <path d="M8.435 13.125H4.0625c-0.690625 0 -1.25 -0.719375 -1.25 -1.606875V3.48125c0 -0.8868750000000001 0.559375 -1.60625 1.25 -1.60625h4.375" stroke-width="1"></path>
                     <path d="M8.125 9.6875 5.9375 7.5 8.125 5.3125m4.0625 2.185h-6.25" stroke-width="1"></path>
                   </svg>
                 </span>
-                <span>{{ button_login }} </span>                               
+                <span>{{ button_login }}</span>                               
               </button>
             </div>
           </form>
