--- a/catalog/view/theme/default/template/extension/module/filter.twig
+++ b/catalog/view/theme/default/template/extension/module/filter.twig
@@ -26,10 +26,10 @@
       {% endfor %}
     </div>
     <div class="buttons">
-      <button type="button" id="button-filter" class="button is-primary is-outlined is-fullwidth">{{ button_filter }}</button>
+      <button type="button" id="button-filter" class="button is-primary is-light is-fullwidth">{{ button_filter }}</button>
     </div>
   </div>
-  <span class="delete is-hidden-desktop filter-trigger"></span>
+  <span class="delete is-large is-hidden-desktop filter-trigger"></span>
 </div>
 <script>
 
