--- a/catalog/view/theme/default/template/extension/module/latest.twig
+++ b/catalog/view/theme/default/template/extension/module/latest.twig
@@ -1,11 +1,11 @@
 <div class="py-6 has-background-light latest" id="latest{{ module }}">
   <div class="container">
-    <div class="columns is-mobile is-multiline">
+    <div class="columns is-mobile is-multiline is-variable is-2-mobile">
       <div class="column is-12">
         <h3 class="title is-1 mb-5 has-text-centered">{{ heading_title }}</h3>
       </div>
       {% for product in products %}
-      <div class="column is-3-fullhd is-4-widescreen is-4-desktop is-6-tablet is-12-mobile">
+      <div class="column is-3-fullhd is-3-widescreen is-3-desktop is-4-tablet is-6-mobile">
         <div class="product-card card is-clipped">
           <div class="card-image">
             <figure class="image">
