--- a/catalog/view/theme/default/template/product/category.twig
+++ b/catalog/view/theme/default/template/product/category.twig
@@ -50,13 +50,12 @@
         {% if products %}
         <div class="products-toolbar is-flex is-justify-content-space-between is-align-items-center">
           <div class="block mb-0">
-            <button type="button" class="filter-trigger button is-primary is-light is-hidden">
+            <button type="button" class="filter-trigger button is-primary is-hidden">
               <span class="icon">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="-0.5 -0.5 16 16" stroke-linecap="round" stroke-linejoin="round" stroke="currentColor" height="20" width="20">
                   <path d="M6.27875 11.0475v-2.44875c0 -0.34625000000000006 0 -0.52 -0.03125 -0.6875a1.83125 1.83125 0 0 0 -0.136875 -0.42875c-0.07125000000000001 -0.15437499999999998 -0.17125 -0.29625 -0.37187499999999996 -0.57875L3.7093749999999996 4.041875c-0.35374999999999995 -0.49812500000000004 -0.530625 -0.7474999999999999 -0.5225 -0.955625a0.610625 0.610625 0 0 1 0.2375 -0.459375C3.5893750000000004 2.5 3.895 2.5 4.50625 2.5h5.988125c0.61125 0 0.9168750000000001 0 1.08125 0.12687500000000002a0.60625 0.60625 0 0 1 0.2375 0.459375c0.00875 0.208125 -0.16875 0.4575 -0.521875 0.95625l-2.029375 2.86125c-0.2 0.28250000000000003 -0.300625 0.42437500000000006 -0.37187499999999996 0.57875a1.83125 1.83125 0 0 0 -0.1375 0.42937500000000006c-0.03125 0.166875 -0.03125 0.34 -0.03125 0.6875v3.6693750000000005m-2.441875 -1.22125c1.03375 -0.4575 2.4425 -0.185 2.4425 1.22125m-2.4425 -1.22125c-0.020625 1.3968749999999999 1.41375 1.7449999999999999 2.4425 1.22125" stroke-width="1"></path>
                 </svg>
               </span>
-              <span>{{ text_filter_trigger }}</span>
             </button>
             <div class="dropdown is-hoverable">
               <div class="dropdown-trigger">
@@ -247,7 +246,7 @@
         {% if not categories and not products %}
         <p>{{ text_empty }}</p>
         <div class="buttons my-3">
-          <a href="{{ continue }}" class="button is-primary is-outlined">{{ button_continue }}</a>
+          <a href="{{ continue }}" class="button is-primary is-light">{{ button_continue }}</a>
         </div>
         {% endif %}
       </div>
