--- a/catalog/view/theme/default/template/account/voucher.twig
+++ b/catalog/view/theme/default/template/account/voucher.twig
@@ -120,7 +120,7 @@
           </div>
           <div class="column is-12">
             <div class="buttons">
-              <button type="submit" class="button is-primary is-outlined">{{ button_continue }}</button>
+              <button type="submit" class="button is-primary is-light">{{ button_continue }}</button>
             </div>
           </div>
         </form>
