--- a/catalog/view/theme/default/template/blog/latest.twig
+++ b/catalog/view/theme/default/template/blog/latest.twig
@@ -81,7 +81,7 @@
         {% else %}
         <p>{{ text_empty }}</p>
         <div class="buttons my-5">
-          <a href="{{ continue }}" class="button is-primary is-outlined">{{ button_continue }}</a>
+          <a href="{{ continue }}" class="button is-primary is-light">{{ button_continue }}</a>
         </div>
         {% endif %}
       </div>
