--- a/catalog/view/theme/default/template/extension/captcha/google.twig
+++ b/catalog/view/theme/default/template/extension/captcha/google.twig
@@ -1,5 +1,5 @@
 <script src="//www.google.com/recaptcha/api.js" type="text/javascript"></script>
-<div class="field required captcha google-captcha">
+<div class="field required captcha">
   <label class="label">{{ entry_captcha }}</label>
   <div class="control">
     <div class="g-recaptcha" data-sitekey="{{ site_key }}"></div>
