--- a/catalog/view/theme/default/template/extension/module/anycategories.twig
+++ b/catalog/view/theme/default/template/extension/module/anycategories.twig
@@ -6,11 +6,11 @@
       </div>
       {% for category in categories %}
       <div class="column is-3-fullhd is-3-widescreen is-3-desktop is-4-tablet is-6-mobile">
-        <a class="box is-relative has-text-centered" href="{{ category.href }}">
-          <span class="image is-flex is-justify-content-center">
+        <a class="box p-0 is-clipped is-relative has-text-centered" href="{{ category.href }}">
+          <span class="image p-3 is-flex is-justify-content-center">
             <img loading="lazy" height="{{ image_height }}" width="{{ image_width }}" src="{{ category.thumb }}" alt="{{ category.name }}" title="{{ category.name }}" />
           </span>
-          <span class="is-size-5-desktop is-size-5-tablet is-size-6-mobile is-block mt-5 has-text-link">{{ category.name }}</span>
+          <span class="p-4 is-size-5-desktop is-size-6-tablet is-size-6-mobile is-block has-text-link">{{ category.name }}</span>
           {% if category.stickers %}
           <div class="stickers has-text-left">
             {% for sticker in category.stickers %}
