--- a/admin/view/template/extension/shipping/flat.twig
+++ b/admin/view/template/extension/shipping/flat.twig
@@ -32,6 +32,13 @@
             </div>
           </div>
           <div class="form-group">
+            <label class="col-sm-2 control-label" for="input-free">{{ entry_free }}</label>
+            <div class="col-sm-10">
+              <input type="text" name="shipping_flat_free" value="{{ shipping_flat_free }}" placeholder="{{ entry_free }}" id="input-free" class="form-control" />
+              <small class="text-info">{{ help_shipping_free }}</small>
+            </div>
+          </div>
+          <div class="form-group">
             <label class="col-sm-2 control-label" for="input-tax-class">{{ entry_tax_class }}</label>
             <div class="col-sm-10">
               <select name="shipping_flat_tax_class_id" id="input-tax-class" class="form-control">
