--- a/catalog/view/theme/default/css/main.css
+++ b/catalog/view/theme/default/css/main.css
@@ -128,8 +128,8 @@ button {
 
 .modal-background {
   background-color: rgb(0 0 0 / 50%);
-  backdrop-filter: blur(7px);
-  -webkit-backdrop-filter: blur(7px);
+  backdrop-filter: blur(1rem);
+  -webkit-backdrop-filter: blur(1rem);
 }
 
 #stores-modal .modal-card {
@@ -272,7 +272,7 @@ button {
 .cart-total .box,
 #checkout-total {
   position: sticky;
-  top: 80px;
+  top: 85px;
 }
 
 .cart-total .box>.block:last-child:after {
@@ -329,8 +329,9 @@ button {
 
 #notifications .notification {
   overflow: hidden;
-  background: rgb(0 0 0 / 50%);
-  backdrop-filter: blur(10px);
+  background: rgb(0 0 0 / 30%);
+  backdrop-filter: blur(1rem);
+  -webkit-backdrop-filter: blur(1rem);
   color: #fff;
   border: 1px solid rgb(255 255 255 / 20%);
 }
@@ -604,14 +605,14 @@ input[type="search"]::-webkit-search-results-decoration {
 .mobile-contacts {
   position: fixed;
   bottom: 2rem;
-  right: -3rem;
+  right: -5rem;
   overflow: visible;
   transition: all 0.4s ease;
   z-index: 1;
 }
 
 .mobile-contacts.shown {
-  transform: translateX(-5rem);
+  transform: translateX(-7rem);
 }
 
 .mobile-contacts .mobile-contacts-trigger {
@@ -656,8 +657,8 @@ footer .scroll-top-trigger {
   bottom: -3rem;
   left: calc(50% - 18px);
   border-radius: 24px;
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(1rem);
+  -webkit-backdrop-filter: blur(1rem);
   transition: all 0.4s ease;
   z-index: 1;
 }
@@ -672,7 +673,7 @@ footer .scroll-top-trigger.shown {
   left: 0;
   z-index: 9;
   width: 100%;
-  box-shadow: 0 0 15px 0 rgb(0 0 0 / 50%);
+  box-shadow: 0 0 5px 0 rgb(0 0 0 / 15%);
 }
 
 #article-images {
@@ -814,8 +815,8 @@ footer .scroll-top-trigger.shown {
   #menu.shown {
     top: 0;
     background: rgb(0 0 0 / 70%) !important;
-    backdrop-filter: blur(12px);
-    -webkit-backdrop-filter: blur(12px);
+    backdrop-filter: blur(1rem);
+    -webkit-backdrop-filter: blur(1rem);
   }
 
   #menu .navbar {
@@ -863,16 +864,17 @@ footer .scroll-top-trigger.shown {
 
   .icons-menu {
     position: fixed;
+    left: 50%;
+    transform: translateX(-50%);
     bottom: 1rem;
     z-index: 3;
-    left: 1rem;
-    width: calc(100% - 2rem);
+    width: auto;
     justify-content: center !important;
     box-shadow: 0 0 5px 0 rgb(0 0 0 / 15%);
     border-radius: 5rem;
     background: rgb(255 255 255 / 80%) !important;
-    backdrop-filter: blur(12px);
-    -webkit-backdrop-filter: blur(12px);
+    backdrop-filter: blur(1rem);
+    -webkit-backdrop-filter: blur(1rem);
   }
 
   #product-main .price {
@@ -917,7 +919,7 @@ footer .scroll-top-trigger.shown {
   }
 
   .mobile-contacts.shown {
-    transform: translateX(-4rem);
+    transform: translateX(-7rem);
   }
 }
 
@@ -978,6 +980,10 @@ footer .scroll-top-trigger.shown {
 }
 
 @media (max-width: 640px) {
+  html {
+    font-size: 14px;
+  }
+
   .modal-content {
     max-height: 100%;
   }
