--- a/admin/view/template/extension/feed/sitemap.twig
+++ b/admin/view/template/extension/feed/sitemap.twig
@@ -29,8 +29,8 @@
           <div class="form-group">
             <label class="col-sm-2 control-label" for="input-status">{{ entry_status }}</label>
             <div class="col-sm-10">
-              <select name="feed_google_sitemap_status" id="input-status" class="form-control">
-                {% if feed_google_sitemap_status %}
+              <select name="feed_sitemap_status" id="input-status" class="form-control">
+                {% if feed_sitemap_status %}
                 <option value="1" selected="selected">{{ text_enabled }}</option>
                 <option value="0">{{ text_disabled }}</option>
                 {% else %}
@@ -41,9 +41,21 @@
             </div>
           </div>
           <div class="form-group">
-            <label class="col-sm-2 control-label" for="input-data-feed">{{ entry_data_feed }}</label>
+            <label class="col-sm-2 control-label" for="input-feed-url">{{ entry_feed_url }}</label>
             <div class="col-sm-10">
-              <textarea rows="5" readonly id="input-data-feed" class="form-control">{{ data_feed }}</textarea>
+              <input type="text" readonly id="input-feed-url" class="form-control" value="{{ feed_url }}">
+              <small class="text-info">{{ help_feed_url }}</small>
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-2 control-label" for="input-cron-url">{{ entry_cron_url }}</label>
+            <div class="col-sm-10">
+              <input type="text" readonly id="input-cron-url" class="form-control" value="{{ cron_url }}">
+              <input type="hidden" name="feed_sitemap_cron_token" value="{{ feed_sitemap_cron_token }}">
+              <small class="text-info">{{ help_cron_url }}</small>
+              <div style="margin-top: 10px;">
+                <button type="button" id="generate" class="btn btn-primary">{{ button_generate }}</button>
+              </div>
             </div>
           </div>
         </form>
@@ -51,4 +63,31 @@
     </div>
   </div>
 </div>
+
+<script>
+$('#generate').on('click', function() {
+  $.ajax({
+    url: '{{ cron_url }}',
+    type: 'get',
+    dataType: 'json',
+    beforeSend: function() {
+      $('#generate').button('loading');
+    },
+    complete: function() {
+      $('#generate').button('reset');
+    },
+    success: function(json) {
+      if (json['success']) {
+        alert(json['success']);
+      }
+      if (json['error']) {
+        alert(json['error']);
+      }
+    },
+    error: function(xhr, ajaxOptions, thrownError) {
+      alert(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
+    }
+  });
+});
+</script>
 {{ footer }}
